; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_l2cap_core.c_l2cap_send_move_chan_rsp.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_l2cap_core.c_l2cap_send_move_chan_rsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l2cap_chan = type { i32, i32, i32 }
%struct.l2cap_move_chan_rsp = type { i8*, i8* }

@.str = private unnamed_addr constant [24 x i8] c"chan %p, result 0x%4.4x\00", align 1
@L2CAP_MOVE_CHAN_RSP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.l2cap_chan*, i32)* @l2cap_send_move_chan_rsp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @l2cap_send_move_chan_rsp(%struct.l2cap_chan* %0, i32 %1) #0 {
  %3 = alloca %struct.l2cap_chan*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.l2cap_move_chan_rsp, align 8
  store %struct.l2cap_chan* %0, %struct.l2cap_chan** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.l2cap_chan*, %struct.l2cap_chan** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @BT_DBG(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), %struct.l2cap_chan* %6, i32 %7)
  %9 = load %struct.l2cap_chan*, %struct.l2cap_chan** %3, align 8
  %10 = getelementptr inbounds %struct.l2cap_chan, %struct.l2cap_chan* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i8* @cpu_to_le16(i32 %11)
  %13 = getelementptr inbounds %struct.l2cap_move_chan_rsp, %struct.l2cap_move_chan_rsp* %5, i32 0, i32 1
  store i8* %12, i8** %13, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i8* @cpu_to_le16(i32 %14)
  %16 = getelementptr inbounds %struct.l2cap_move_chan_rsp, %struct.l2cap_move_chan_rsp* %5, i32 0, i32 0
  store i8* %15, i8** %16, align 8
  %17 = load %struct.l2cap_chan*, %struct.l2cap_chan** %3, align 8
  %18 = getelementptr inbounds %struct.l2cap_chan, %struct.l2cap_chan* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.l2cap_chan*, %struct.l2cap_chan** %3, align 8
  %21 = getelementptr inbounds %struct.l2cap_chan, %struct.l2cap_chan* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @L2CAP_MOVE_CHAN_RSP, align 4
  %24 = call i32 @l2cap_send_cmd(i32 %19, i32 %22, i32 %23, i32 16, %struct.l2cap_move_chan_rsp* %5)
  ret void
}

declare dso_local i32 @BT_DBG(i8*, %struct.l2cap_chan*, i32) #1

declare dso_local i8* @cpu_to_le16(i32) #1

declare dso_local i32 @l2cap_send_cmd(i32, i32, i32, i32, %struct.l2cap_move_chan_rsp*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
